--- a/liste.html
+++ b/liste.html
@@ -5,20 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cihat Erdogmak</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/style.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
+
     <header class="fixed-top p-sm-4">
         <div class="container px-0 px-lg-1">
             <nav class="navbar navbar-expand-lg bg-body-tertiary px-4">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo/logo.svg" alt="Logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
@@ -27,7 +32,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="liste.html">Liste</a>
+                            <a class="nav-link" href="#list">Liste</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Listings</a>
@@ -53,6 +58,58 @@
         </div>
     </header>
 
+    <div class="section category-header-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-7">
+                    <div class="category-description d-flex flex-column">
+                        <span>From as low as $10 per day with limited time offer discounts.</span>
+                        <span class="display-4 mt-4">Your <span class="text-gold">Property</span>, Our Priority.</span>
+                        <div class="category-description-search mt-4 p-3">
+                            <div class="category-description-search-keyword d-flex flex-column">
+                                <span class="fw-lighter">Keyword</span>
+                                <div class="d-flex gap-5 ">
+                                    <span>Enter Keyword</span>
+                                    <img src="assets/img/icon/search.svg" alt="">
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5 mt-5 mb-5">
+                    <div class="row mt-5 category-header">
+                        <div class="col-6">
+                            <div class="category-header-image-1">
+                                <img src="assets/img/category-header/image-3.jpg" alt="">
+                                <img src="assets/img/category-header/image.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="category-header-image-2">
+                                <img src="assets/img/category-header/image-2.jpg" alt="">
+                                <img src="assets/img/category-header/image-1.jpg" alt="">
+
+                            </div>
+                            <div class="category-header-exclusive">
+                                <div class="category-header-exclusive-card">
+                                    <div class="category-header-exclusive-card-person d-flex align-items-center justify-content-center mb-3 gap-2">
+                                        <img src="assets/img/football/MESSI.jpg" alt="">
+                                        <img src="assets/img/football/Cristiano_Ronaldo_Al-Nassr_2023.jpg" alt="">
+                                        <img src="assets/img/football/arda-guler.webp" alt="">
+                                    </div>
+                                    <span class="fw-semibold">1000K+</span>
+                                    <span class="fw-lighter ">Exclusive Agents</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <section class="bg bg-list py-5">
         <div class="container py-5">
             <div class="display-3 text-white fw-semibold text-center text-lg-start py-5 mt-5 col-12 col-lg-6">
@@ -63,65 +120,77 @@
         </div>
     </section>
 
-    <section class="mt-5 py-5">
+    <section class="mt-5 py-5" id="list">
         <div class="container">
             <div class="d-flex flex-column align-items-center justify-content-center mb-5">
                 <span class="fs-2 fw-semibold">Properties for list</span>
                 <span class="fs-6 fw-light text-center">Lorem ipsum dolor sit amet</span>
             </div>
             <div class="row">
-                <div class="d-none d-lg-block col-lg-3">
-                    <div class="property-filter mb-3">
-                        <div class="property-filter-content">
-                            <div class="property-filter-content-title">
-                                Kategoriler
-                            </div>
-                            <div class="property-filter-content-elements">
-                                <a href="#" class="filter-link">Kiralık</a>
-                                <a href="#" class="filter-link">Satılık</a>
-                                <a href="#" class="filter-link">Yazlık</a>
-                                <a href="#" class="filter-link">Devren Kiralık</a>
-                                <a href="#" class="filter-link">Villa</a>
-                                <a href="#" class="filter-link">Yalı</a>
-                            </div>
-                        </div>
-                        <div class="property-filter-content">
-                            <div class="property-filter-content-title">
-                                İlan Tipi
-                            </div>
-                            <div class="property-filter-content-elements">
-                                <div class="form-check">
-                                    <input class="form-check-input d-none" type="checkbox" id="kiralik">
-                                    <label class="form-check-label" for="kiralik">
-                                        Kiralık
-                                    </label>
+                <div class="col-12 d-lg-none mb-4">
+                    <button class="btn btn-main-one text-white"
+                        onclick="propertyFilterDrawer.classList.toggle('active')">Filtre</button>
+                </div>
+                <div class="col-lg-3">
+                    <div id="propertyFilterDrawer" class="property-filter-wrapper">
+                        <div class="property-filter mb-3">
+                            <div class="property-filter-content">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <div class="property-filter-content-title">
+                                        Kategoriler
+                                    </div>
+                                    <button class="d-flex d-lg-none btn btn-main-one text-white"
+                                        onclick="propertyFilterDrawer.classList.toggle('active')">Kapat</button>
                                 </div>
-                                <div class="form-check">
-                                    <input class="form-check-input d-none" type="checkbox" id="satilik">
-                                    <label class="form-check-label" for="satilik">
-                                        Satılık
-                                    </label>
+                                <div class="property-filter-content-elements">
+                                    <a href="#" class="filter-link">Kiralık</a>
+                                    <a href="#" class="filter-link">Satılık</a>
+                                    <a href="#" class="filter-link">Yazlık</a>
+                                    <a href="#" class="filter-link">Devren Kiralık</a>
+                                    <a href="#" class="filter-link">Villa</a>
+                                    <a href="#" class="filter-link">Yalı</a>
                                 </div>
                             </div>
+                            <div class="property-filter-content">
+                                <div class="property-filter-content-title">
+                                    İlan Tipi
+                                </div>
+                                <div class="property-filter-content-elements">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="propertyType" id="kiralik">
+                                        <label class="form-check-label" for="kiralik">
+                                            Kiralık
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="propertyType" id="satilik">
+                                        <label class="form-check-label" for="satilik">
+                                            Satılık
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="property-filter-content">
+                                <div class="property-filter-content-title">
+                                    Danışman Seçimi
+                                </div>
+                                <div class="property-filter-content-elements">
+                                    <select class="form-select">
+                                        <option disabled hidden selected>Danışman Seçiniz</option>
+                                        <option value="1">Özlem</option>
+                                        <option value="2">Sıla</option>
+                                        <option value="3">Ayşe</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
-                        <div class="property-filter-content">
-                            <div class="property-filter-content-title">
-                                Danışman Seçimi
-                            </div>
-                            <div class="property-filter-content-elements">
-                                <select class="form-select">
-                                    <option disabled hidden selected>Danışman Seçiniz</option>
-                                    <option value="1">Özlem</option>
-                                    <option value="2">Sıla</option>
-                                    <option value="3">Ayşe</option>
-                                </select>
-                            </div>
+                        <div class="property-filter-overlay" onclick="propertyFilterDrawer.classList.toggle('active')">
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-9">
                     <div class="row">
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -172,7 +241,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -223,7 +292,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -274,7 +343,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -325,7 +394,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -376,7 +445,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -427,7 +496,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -478,7 +547,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -529,7 +598,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -580,7 +649,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -631,7 +700,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -682,7 +751,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-md-4 mb-3">
+                        <div class="col-12 col-md-4 mb-3">
                             <div class="property-card">
                                 <div class="property-card-image">
                                     <div class="property-card-image-tag">
@@ -737,22 +806,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section class="py-5 my-5 bg-light">
-        content
-    </section>
-
-    <section class="py-5 my-5 bg-light">
-        content
-    </section>
-
-    <section class="py-5 my-5 bg-light">
-        content
-    </section>
-
-    <section class="py-5 my-5 bg-light">
-        content
     </section>
 
     <footer>
@@ -782,8 +835,12 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js"
+        integrity="sha512-q583ppKrCRc7N5O0n2nzUiJ+suUv7Et1JGels4bXOaMFQcamPk9HjdUknZuuFjBNs7tsMuadge5k9RzdmO+1GQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
