--- a/liste.html
+++ b/liste.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/style.min.css?v=1.0.2">
+    <link rel="stylesheet" href="assets/css/style.min.css?v=1.0.3">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,23 +61,61 @@
     <div class="section category-header-bg">
         <div class="container">
             <div class="row">
-                <div class="col-7">
-                    <div class="category-description d-flex flex-column">
+                <div class="col-12 col-lg-7 mt-5">
+                    <div class="category-description d-flex flex-column justify-content-center gap-2">
                         <span>From as low as $10 per day with limited time offer discounts.</span>
                         <span class="display-4 mt-4">Your <span class="text-gold">Property</span>, Our Priority.</span>
-                        <div class="category-description-search mt-4 p-3">
-                            <div class="category-description-search-keyword d-flex flex-column">
-                                <span class="fw-lighter">Keyword</span>
-                                <div class="d-flex gap-5 ">
-                                    <span>Enter Keyword</span>
-                                    <img src="assets/img/icon/search.svg" alt="">
+                        <div class="category-description-search my-4 p-3">
+                            <form>
+                                <div class="row">
+                                    <div class="col-4 col-lg-3">
+                                        <div class="form-group">
+                                            <label class="fw-lighter" for="exampleInputEmail1">Keyword</label>
+                                            <div class="d-flex align-items-center">
+                                                <input type="email" class="form-control border-0"
+                                                    id="exampleInputEmail1" placeholder="Enter Keyword">
+                                                <i class="icon icon-w16 icon-search"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-lg-3">
+                                        <label class="fw-lighter" for="select1">Status</label>
+                                        <select id="select1" class="form-select border-0">
+                                            <option selected>All Status</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-4 col-lg-3">
+                                        <label class="fw-lighter" for="select1">Type</label>
+                                        <select id="select1" class="form-select border-0"
+                                            aria-label="Default select example">
+                                            <option selected>All Type</option>
+                                            <option value="1">One</option>
+                                            <option value="2">Two</option>
+                                            <option value="3">Three</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-12 col-lg-3">
+                                        <div class="d-flex align-items-center gap-2 w-100 justify-content-center">
+                                            <div class="btn btn-main-white">Filter</div>
+                                            <div class="btn btn-main-gold">Search</div>
+                                        </div>
+                                    </div>
                                 </div>
-
-                            </div>
                         </div>
+                        <div class="category-description-popular d-flex gap-2 align-items-center mb-5">
+                            <span class="">Popular Search</span>
+                            <span class="small rounded-pill text-main-one px-2">Modern Villa</span>
+                            <span class="small rounded-pill text-main-one px-2">Studio Apartment</span>
+                            <span class="small rounded-pill text-main-one px-2">Town House</span>
+
+                        </div>
+
                     </div>
                 </div>
-                <div class="col-5 mt-5 mb-5">
+                <div class="col-5 mt-5 mb-5 d-none d-lg-block">
                     <div class="row mt-5 category-header">
                         <div class="col-6">
                             <div class="category-header-image-1">
@@ -93,7 +131,8 @@
                             </div>
                             <div class="category-header-exclusive">
                                 <div class="category-header-exclusive-card">
-                                    <div class="category-header-exclusive-card-person d-flex align-items-center justify-content-center mb-3 gap-2">
+                                    <div
+                                        class="category-header-exclusive-card-person d-flex align-items-center justify-content-center mb-3 gap-2">
                                         <img src="assets/img/football/MESSI.jpg" alt="">
                                         <img src="assets/img/football/Cristiano_Ronaldo_Al-Nassr_2023.jpg" alt="">
                                         <img src="assets/img/football/arda-guler.webp" alt="">
